Implemented basic CRUD for course